--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
 <!--            </intent-filter>-->
         </activity>
         <activity android:name=".view.SignInActivity" />
+        <activity android:name=".view.SignUpActivity" />
+
 
     </application>
 
