sign up, sign in and email verification completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
 
         <activity android:name=".view.SignInActivity" />
         <activity android:name=".view.SignUpActivity" />
+        <activity android:name=".view.VerifyEmailActivity" />
         <activity android:name=".view.HomeActivity" />
+
 
 
     </application>
