--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         <activity android:name=".view.VerifyEmailActivity" />
         <activity android:name=".view.HomeActivity" />
 
+        <activity android:name=".view.CountriesActivity" />
+
         <!-- ADD FLUTTER HOME ACTIVITY -->
         <activity
             android:name=".view.FlutterHomeActivity"
