Disable Flutter setup in mobile CI workflow
Comment out Flutter setup and dependency installation steps in CI workflow.

--- a/.github/workflows/mobile-ci.yml
+++ b/.github/workflows/mobile-ci.yml
@@ -34,25 +34,25 @@ jobs:
           build-tools: 34.0.0
 
       # 4) Setup Flutter (for the flutter_module)
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: 'stable'
+      # - name: Set up Flutter
+      #   uses: subosito/flutter-action@v2
+      #   with:
+      #     flutter-version: 'stable'
 
       # 5) Install Flutter module dependencies
-      - name: Flutter pub get
-        working-directory: flutter_module
-        run: flutter pub get
+      # - name: Flutter pub get
+      #   working-directory: flutter_module
+      #   run: flutter pub get
 
       # 6) Configure flutter_module Android local.properties to point to Flutter SDK
-      - name: Configure Flutter SDK path for module
-        run: |
-          FLUTTER_SDK_DIR="$(flutter sdk-path)"
-          mkdir -p flutter_module/.android
-          cat <<EOF > flutter_module/.android/local.properties
-          sdk.dir=$ANDROID_HOME
-          flutter.sdk=$FLUTTER_SDK_DIR
-          EOF
+      # - name: Configure Flutter SDK path for module
+      #   run: |
+      #     FLUTTER_SDK_DIR="$(flutter sdk-path)"
+      #     mkdir -p flutter_module/.android
+      #     cat <<EOF > flutter_module/.android/local.properties
+      #     sdk.dir=$ANDROID_HOME
+      #     flutter.sdk=$FLUTTER_SDK_DIR
+      #     EOF
 
       # 7) Build the Android app that embeds the module
       - name: Build Android debug APK
