--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVM_app"
-        android:usesCleartextTraffic="true">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="false">
 
-        <activity
+
+    <activity
             android:name=".view.SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -64,7 +66,12 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize" />
 
-        <!-- FCM Service -->
+        <activity
+            android:name=".view.SSLPinningTestActivity"
+            android:exported="false" />
+
+
+        <!--         FCM Service -->
         <service
             android:name=".service.MyFirebaseMessagingService"
             android:exported="false">
